# TNFR-Python-Engine

./: .coverage  .env.example  .flake8  .gitignore  .gitignore_riemann  .pre-commit-config.yaml  .semgrep.yaml  .zenodo.json  404.html  ADVANCED_CACHING_OPTIMIZATIONS.md  AGENTS.md  ARCHITECTURAL_AUDIT.md  ARCHITECTURE.md  ARITHMETIC_TNFR_COMPLETION_REPORT.md  AUDIT_EXECUTIVE_SUMMARY.md  AUXILIARY_OBJECTS_FIX_SUMMARY.md  BENCHMARKING_REPORT.md  CACHE_ARCHITECTURE.md  CACHE_OPTIMIZATIONS.md  CACHE_OPTIMIZATION_SUMMARY.md  CACHING_IMPLEMENTATION_SUMMARY.md  CANONICAL_BOUNDARY_PATTERN.md  CANONICAL_DOCUMENTATION_MANIFEST.md  CANONICAL_GRAMMAR_DERIVATION.md  CANONICAL_GRAMMAR_IMPLEMENTATION.md  CANONICAL_SOURCES.md  CANONICAL_SUMMARY.md  CANONICITY_VERIFICATION.md  CHANGELOG.md  CITATION.cff  CLI_REFINEMENT_SUMMARY.md  CODE_QUALITY_IMPROVEMENT_SUMMARY.md  COMMAND_INJECTION_PREVENTION.md  CONFIG_MUTABLEMAPPING_SUMMARY.md  CONSOLIDATION_IMPACT_ANALYSIS.md  CONTRIBUTING.md  CRYPTOGRAPHIC_SECURITY_IMPROVEMENTS.md  CWE685_FIX_SUMMARY.md  DOCUMENTATION.txt  DOCUMENTATION_CONSOLIDATION.md  (+221 more)
.codeql/: codeql-config.yml
.github/: EXTENSION_TEMPLATE.md  WORKFLOWS.md  dependabot.yml  pull_request_template.md  todo_list.json
AGENTS/: index.html
API_CONTRACTS/: index.html
ARCHITECTURE/: index.html
BIOLOGICAL_OPERATOR_GRAMMAR/: index.html
BIOLOGY_COMPLEX_SYSTEMS/: index.html
CANONICAL_OZ_SEQUENCES/: index.html
CANONICAL_SOURCES/: index.html
CELESTIAL_MECHANICS_PHENOMENOLOGY/: index.html
CELL_EMERGENCE_FROM_TNFR/: index.html
CHANGELOG/: index.html
CLASSICAL_KINEMATICS/: index.html
CLASSICAL_MECHANICS_CORRESPONDENCE/: index.html
CONSCIOUSNESS_THE_ETHERIC_INTERFACE/: index.html
CONTRIBUTING/: index.html
COSMOGONY_THE_ORIGIN/: index.html
COSMOLOGICAL_NODAL_DYNAMICS/: index.html
CROSS_REFERENCE_MATRIX/: index.html
DOCUMENTATION_HIERARCHY/: index.html
DOCUMENTATION_INDEX/: index.html
DYNAMIC_LIMITS_INTEGRATION/: index.html
DYNAMIC_LIMITS_RESEARCH/: index.html
ELECTROMAGNETIC_FIRMAMENT_EVIDENCE/: index.html
EMISSION_METRICS_GUIDE/: index.html
ETHERIC_CHEMISTRY_PERIODIC_TABLE/: index.html
ETHERIC_PHYSICS_AND_GRAVITY/: index.html
EXTENDED_FIELDS_INTEGRATION_SUMMARY/: index.html
FUNDAMENTAL_TNFR_THEORY_UNIVERSAL_TETRAHEDRAL_CORRESPONDENCE/: index.html
GEOCENTRIC_DYNAMICS/: index.html
GEOCENTRIC_VORTEX_EVIDENCE/: index.html
GLOSSARY/: index.html
GLOSSARY_theory_2/: index.html
GRAND_UNIFIED_TNFR_THEORY/: index.html
HEALTH_METRICS_GUIDE/: index.html
IA/: .gitignore  LICENSE  PHASE_1_PLAN.md  README.md  TNFR_AI_FEASIBILITY_STUDY.md  pyproject.toml  requirements-phase1.txt
IA/experiments/: 01_microscope_smoke.py
IA/probe/: __init__.py  graph.py  loader.py  telemetry.py
IA/reports/: README.md
INTERACTIONS_GUIDE/: index.html
K_PHI_TASK3_ASYMPTOTIC_FREEDOM/: index.html
LICENSE/: index.html
LIFE_EMERGENCE_FROM_TNFR/: index.html
LIFE_EMERGENCE_THEORETICAL_FRAMEWORK/: index.html
LIFE_MATHEMATICAL_DERIVATION/: index.html
MATHEMATICAL_FORMALISM_OF_THE_LOGOS/: index.html
MIGRATION_GUIDE_2.0/: index.html
MOLECULAR_CHEMISTRY_HUB/: index.html
NBODY_COMPARISON/: index.html
NEUROSCIENCE_CONSCIOUSNESS/: index.html
OPERATOR_COMPLETENESS/: index.html
OntoSim/: OntoSim.py  OntoSimCore.py  OntoSimVisu.py
PARTICLE_EMERGENCE_WITH_UNIFIED_SYSTEM/: index.html
PARTICLE_PHYSICS_COLLIDER/: index.html
PATTERN_COOKBOOK/: index.html
PATTERN_REFERENCE/: index.html
PINEAL_TNFR_DERIVATION/: index.html
PLANETARY_MANDALAS/: index.html
PRIME_EMERGENCE_THEORETICAL_FRAMEWORK/: index.html
QUANTUM_MECHANICS_CORRESPONDENCE/: index.html
README/: index.html
WEBS/: EPQNA.html
factorization-lab/: .zenodo.json  LICENSE_SNAPSHOT.md  PACKAGE_SUMMARY.md  README.md  ZENODO_PUBLICATION_GUIDE.md  ZENODO_RELEASE_NOTES.md  demo_snapshots.db  pyproject.toml  seed_management.py  snapshot_system.py  test_certificate_hashing.py  test_installation.py  verification_trajectory_77.json
factorization-lab/analysis/: analyze_patterns.py  certificate_manifest.py
factorization-lab/benchmarks/: benchmark_analysis.py  benchmark_expansion_suite.py  full_spectrum_factorization.py  paley_gap_extended.py  paley_gap_smoke.py  test_benchmark_suite.py
factorization-lab/demos/: failure_telemetry_batch.py  feedback_integration_demo.py  integration_demo_snapshots.db  seed_management_integration_demo.py  snapshot_integration_demo.py  trajectory_143.json  trajectory_77.json  trajectory_89.json  trajectory_91.json  trajectory_97.json
factorization-lab/demos/experiment_contexts/: exp_0b1663cd19b7.json  exp_0bf0054b7474.json  exp_75a4c8ca616a.json  exp_848ee0fd1857.json  exp_f6fe00562193.json  exp_fdf3da424e1e.json
factorization-lab/docs/: FACTORING_PLAYBOOK.md  FALSE_POSITIVE_TEST_SUITE.md  OPERATOR_CERTIFICATES.md  ROADMAP.md  SPECTRAL_ROUTE.md
factorization-lab/experiment_contexts/: exp_cebe1d9e7d8e.json
factorization-lab/notebooks/: spectral_history.ipynb
factorization-lab/scripts/: run_false_positive_tests.py
factorization-lab/tests/: run_false_positive_test_suite.py  test_cli.py  test_false_positive_methodology.py  test_false_positive_verifier.py  test_feedback_integration.py  test_partitioning.py  test_seed_management.py  test_self_opt_support.py  test_snapshot_system.py  test_spectral_paley.py  test_verification_robustness.py
factorization-lab/tnfr_factorization/: __init__.py  api.py  cli.py  failure_telemetry.py  feedback_adapter.py  feedback_integration.py  partitioning.py  self_opt_support.py  spectral_paley.py
primality-test/: .zenodo.json  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  RELEASE_NOTES_v1.0.md  ZENODO_PUBLICATION_GUIDE.md  pyproject.toml  setup.py  test_installation.py
primality-test/benchmarks/: comprehensive_benchmark.py
primality-test/docs/: ADVANCED_INTEGRATION.md  mathematical_foundation.md  performance_analysis.md
primality-test/examples/: advanced_examples.py  basic_usage.py
primality-test/tnfr_primality/: __init__.py  __main__.py  advanced_cli.py  advanced_core.py  cli.py  constants.py  core.py  optimized.py
(+14811 files in other folders)
