[project]
name = "tnfr"
version = "4.5.2"
description = "Modular structural-based dynamics on networks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "fmg" }]
keywords = [
  "TNFR", "resonant fractal", "resonance", "glyphs",
  "networkx", "dynamics", "coherence", "EPI", "Kuramoto"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = ["networkx>=2.6"]

[project.scripts]
tnfr = "tnfr.cli:main"

[project.urls]
Homepage = "https://pypi.org/project/tnfr/"
Repository = "https://github.com/fermga/Teoria-de-la-naturaleza-fractal-resonante-TNFR-"
Theoretical foundations = "https://fermga.github.io/Teoria-de-la-naturaleza-fractal-resonante-TNFR-/"
Trained GPT = "https://chatgpt.com/g/g-67abc78885a88191b2d67f94fd60dc97-tnfr-teoria-de-la-naturaleza-fractal-resonante"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"





