[project]
name = "tnfr"
dynamic = ["version"]
description = "Modular structural-based dynamics on networks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "fmg" }]
keywords = [
  "TNFR", "complex systems", "fractals", "resonance", 
  "networks", "structural dynamics", 
  "structural analysis"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "networkx>=2.6",
  "cachetools>=5",
  "typing-extensions>=4.4; python_version < \"3.10\"",
]

[project.optional-dependencies]
numpy = ["numpy>=1.24"]
yaml = ["pyyaml>=6.0"]
orjson = ["orjson>=3"]
test = [
  "pytest>=7",
  "pytest-benchmark>=4",
  "pydocstyle>=6",
  "coverage>=7",
  "flake8>=5",
  "flake8-pyproject>=1.2",
  "vulture>=2",
]
typecheck = [
  "mypy>=1.8",
  "networkx-stubs>=0.0.1",
  "types-cachetools>=6.0.0.0",
  "numpy>=1.24",
]
release = [
  "python-semantic-release>=10.4,<11",
  "setuptools-scm>=8,<9",
  "build>=1",
  "towncrier>=23",
]

[project.scripts]
tnfr = "tnfr.cli:main"

[project.urls]
Homepage = "https://pypi.org/project/tnfr/"
Repository = "https://github.com/fermga/TNFR-Python-Engine"
GPT = "https://chatgpt.com/g/g-67abc78885a88191b2d67f94fd60dc97-tnfr-resonant-fractal-nature-theory"

[tool.setuptools.package-data]
tnfr = ["py.typed"]

[tool.setuptools_scm]
tag_regex = '^v(?P<version>[0-9]+\.[0-9]+\.[0-9]+)$'
local_scheme = "no-local-version"
write_to = "src/tnfr/_generated_version.py"

[tool.semantic_release]
version_source = "tag"
commit_parser = "conventional"
allow_zero_version = false
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "^main$"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "meta/semantic_release/templates"
mode = "update"
changelog_file = ""

[tool.semantic_release.changelog.default_templates]
mask_initial_release = true

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat", "structure"]
patch_tags = ["fix", "perf", "refactor", "docs", "test", "build", "ci", "style", "chore"]
other_allowed_tags = ["revert", "docs", "test", "build", "ci", "style", "refactor", "perf", "chore"]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "test", "build", "ci", "style", "chore", "structure", "revert"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
skip = ["benchmarks"]

[tool.flake8]
max-line-length = 88
ignore = ["E501", "W503"]
exclude = ["benchmarks/"]

[tool.pydocstyle]
convention = "numpy"
add-ignore = [
  "D202",  # Allow blank line after docstring where needed for readability.
]

[tool.tnfr.language_check]
exclude = [
  "TNFR.pdf",
  "benchmarks/**/*.pdf",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-m 'not slow' --benchmark-skip"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "benchmarks: run with 'pytest benchmarks --benchmark-only' to execute the benchmark suite",
  "stress: high-load deterministic stress coverage (select with '-m \"stress\"')",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = false
no_implicit_optional = false
strict_equality = false
disallow_any_unimported = false
show_error_codes = true
follow_imports = "skip"
allow_redefinition = true
allow_untyped_defs = false
allow_untyped_calls = false
allow_untyped_globals = false

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true


[build-system]
requires = ["setuptools>=78.1.1", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
