# Standalone-repo packaging stub.
#
# While inside TNFR-Python-Engine, `tnfr` is provided by the parent repo
# (editable install). After extraction into a private repo, this file becomes
# the actual project manifest.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tnfr-ia"
version = "0.0.0"
description = "TNFR-structured AI — feasibility & probe layer (private)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "F. F. Martinez Gamo" }]
dependencies = [
    "tnfr>=0.0.3",
    "transformers>=4.45,<5",
    "accelerate>=0.34",
    "datasets>=3.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "networkx>=3.0",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["probe*", "experiments*"]
